# hugo-ai-studio

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  compose.yml  docker-compose.yml  nginx.conf  pyproject.toml  pytest.ini
ai-hugo-backend/: main.py  requirements.txt
ai-hugo-backend/models/: generation_request.py  site_config.py
ai-hugo-backend/services/: content_service.py  hugo_service.py  llm_service.py
ai-hugo-backend/templates/blog/: config.toml
ai-hugo-backend/templates/blog/content/: _index.md
ai-hugo-backend/templates/business/: config.toml
ai-hugo-backend/templates/documentation/: config.toml
ai-hugo-backend/templates/portfolio/: config.toml
ai-hugo-backend/templates/portfolio/content/: _index.md
ai-hugo-frontend/: app.py  requirements.txt
ai-hugo-frontend/components/: content_generator.py  preview.py  site_config.py
ai-hugo-frontend/utils/: hugo_generator.py  llm_client.py
backend/: Dockerfile  main.py  requirements.txt
data/: sites.db
frontend/: Dockerfile  nginx.conf  package.json
frontend/src/: App.js  index.css
hugo-builder/: Dockerfile
hugo-builder/scripts/: build-site.sh  validate-site.sh
nginx/: Dockerfile  custom-index.html  nginx.conf
react-frontend/: package.json
react-frontend/src/: App.js
simple-frontend/: Dockerfile  index.html  nginx.conf
volumes/database/: sites.db
